--- a/nodejs-buildpack/bin/build
+++ b/nodejs-buildpack/bin/build
@@ -5,7 +5,6 @@ set -eo pipefail
 env_dir=$1/env
 cache_dir=$2
 launch_dir=$3
-launch_toml=$1/launch.toml
 
 # TODO: pull version from package.json
 nodejs_url=https://nodejs.org/dist/v8.11.3/node-v8.11.3-linux-x64.tar.xz
@@ -74,4 +73,4 @@ if [[ $local_checksum != $remote_checksum ]] ; then
 fi
 
 # Set default start command
-echo 'processes = [{ type = "web", command = "npm start"}]' > "$launch_toml"
+echo 'processes = [{ type = "web", command = "npm start"}]' > "$launch_dir/launch.toml"
