--- a/nodejs-buildpack/buildpack.toml
+++ b/nodejs-buildpack/buildpack.toml
@@ -1,4 +1,4 @@
 id = "sh.packs.samples.buildpack.nodejs"
 version = "0.0.1"
 name = "Sample Node.js Buildpack"
-stacks = ["ubuntu:18.04"]
+stacks = ["packs/v3"]
