--- a/nodejs-buildpack/bin/build
+++ b/nodejs-buildpack/bin/build
@@ -8,7 +8,7 @@ launch_dir=$3
 
 # TODO: pull version from package.json
 node_version=v8.11.3
-nodejs_url=https://nodejs.org/dist/$node_version/node-${node_version}-linux-x64.tar.xz
+nodejs_url=https://nodejs.org/dist/${node_version}/node-${node_version}-linux-x64.tar.xz
 
 # TODO: to add support for vendored apps:
 # - delete node_modules layer in cache
