--- a/java-buildpack/bin/build
+++ b/java-buildpack/bin/build
@@ -28,6 +28,9 @@ export PATH=\$JAVA_HOME/bin:\$PATH
 export LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server:\$LD_LIBRARY_PATH"
 EOF
   echo "version = \"1.8.0_163\"" > $launch_dir/jdk.toml
+
+  # TODO put the jdk in the cache
+  # TODO write to $cache_dir/jdk/env
 fi
 source $launch_dir/jdk/.profile.d/jdk.sh
 
