--- a/java-buildpack/bin/build
+++ b/java-buildpack/bin/build
@@ -21,8 +21,8 @@ if [[ ! -f $launch_dir/jdk.toml ]]; then
   mkdir -p $launch_dir/jdk
   jdk_url="https://cdn.azul.com/zulu/bin/zulu8.28.0.1-jdk8.0.163-linux_x64.tar.gz"
   curl -sfL "$jdk_url" | tar pxz -C $launch_dir/jdk --strip-components=1
-  mkdir -p $launch_dir/jdk/.profile.d
-  cat << EOF > $launch_dir/jdk/.profile.d/jdk.sh
+  mkdir -p $launch_dir/jdk/profile.d
+  cat << EOF > $launch_dir/jdk/profile.d/jdk.sh
 export JAVA_HOME=$launch_dir/jdk
 export PATH=\$JAVA_HOME/bin:\$PATH
 export LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server:\$LD_LIBRARY_PATH"
