--- a/hello-world-buildpack/bin/build
+++ b/hello-world-buildpack/bin/build
@@ -5,10 +5,12 @@ echo "---> Hello World buildpack"
 set -eo pipefail
 
 env_dir=$1/env
-cache_dir=$2
-launch_dir=$3
+plan_dir=$2
+cache_dir=$3
+launch_dir=$4
 
 echo "     env_dir: ${env_dir}"
+echo "     plan_dir: ${plan_dir}"
 echo "     cache_dir: ${cache_dir}"
 echo "     launch_dir: ${launch_dir}"
 
