--- a/hello-world-buildpack/bin/build
+++ b/hello-world-buildpack/bin/build
@@ -4,14 +4,12 @@ echo "---> Hello World buildpack"
 
 set -eo pipefail
 
-env_dir=$1/env
-plan_dir=$2
-cache_dir=$3
-launch_dir=$4
+env_dir=$2/env
+layers_dir=$1
+plan_path=$3
 
 echo "     env_dir: ${env_dir}"
-echo "     plan_dir: ${plan_dir}"
-echo "     cache_dir: ${cache_dir}"
-echo "     launch_dir: ${launch_dir}"
+echo "     plan_path: ${plan_path}"
+echo "     layers_dir: ${layers_dir}"
 
 echo "---> Done"
