--- a/java-buildpack/bin/build
+++ b/java-buildpack/bin/build
@@ -15,6 +15,9 @@ jdk_version="1.8.0_163"
 maven_url="https://apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz"
 maven_version="3.5.4"
 
+gradle_url="https://downloads.gradle.org/distributions/gradle-5.1-bin.zip"
+gradle_version="5.1"
+
 # Load user-provided build-time environment variables
 if compgen -G "$env_dir/*" > /dev/null; then
   for var in "$env_dir"/*; do
@@ -61,40 +64,85 @@ for var in "$layers_dir"/jdk/env/*; do
 done
 export PATH=$layers_dir/jdk/bin:$PATH
 
+if [[ -f pom.xml ]]; then
 
-if [[ ! -d $layers_dir/maven_m2 ]]; then
-  mkdir -p $layers_dir/maven_m2
-  echo "cache = true" > $layers_dir/maven_m2.toml
+  target_dir="target"
+
+  if [[ ! -d $layers_dir/maven_m2 ]]; then
+    mkdir -p $layers_dir/maven_m2
+    echo "cache = true" > $layers_dir/maven_m2.toml
+  fi
+  ln -s $layers_dir/maven_m2 $HOME/.m2
+  MAVEN_OPTS="${MAVEN_OPTS:-"-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"}"
+
+  if [[ -x mvnw ]]; then
+    echo "---> Running Maven Wrapper"
+    ./mvnw clean install -B -DskipTests
+  else
+    if [[ -f $layers_dir/maven.toml ]]; then
+      cached_maven_url=$(cat "$layers_dir/maven.toml" | yj -t | jq -r .metadata.url 2>/dev/null || echo 'Maven TOML parsing failed')
+    fi
+    if [[ $maven_url != $cached_maven_url ]] ; then
+      echo "---> Installing Maven"
+      maven_dir="$layers_dir/maven"
+      rm -rf "$maven_dir"
+      mkdir -p "$maven_dir"
+      wget -q -O - "$maven_url" | tar pxz -C "$maven_dir" --strip-components=1
+      echo "launch = false" > "$layers_dir"/maven.toml
+      echo "build = true" >> "$layers_dir"/maven.toml
+      echo "cache = true" >> "$layers_dir"/maven.toml
+      echo -e "[metadata]\n  version = \"$maven_version\"\n  url = \"$maven_url\"" >> "$layers_dir"/maven.toml
+    fi
+    export PATH=$PATH:$layers_dir/maven/bin
+
+    echo "---> Running Gradle"
+    mvn clean install -B -DskipTests
+  fi
+
 fi
-ln -s $layers_dir/maven_m2 $HOME/.m2
-MAVEN_OPTS="${MAVEN_OPTS:-"-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"}"
 
-if [[ -x mvnw ]]; then
-  echo "---> Running Maven Wrapper"
-  ./mvnw clean install -B -DskipTests
-else
-  if [[ -f $layers_dir/maven.toml ]]; then
-    cached_maven_url=$(cat "$layers_dir/maven.toml" | yj -t | jq -r .metadata.url 2>/dev/null || echo 'Maven TOML parsing failed')
-  fi
-  if [[ $maven_url != $cached_maven_url ]] ; then
-    echo "---> Installing Maven"
-    maven_dir="$layers_dir/maven"
-    rm -rf "$maven_dir"
-    mkdir -p "$maven_dir"
-    wget -q -O - "$maven_url" | tar pxz -C "$maven_dir" --strip-components=1
-    echo "launch = false" > "$layers_dir"/maven.toml
-    echo "build = true" >> "$layers_dir"/maven.toml
-    echo "cache = true" >> "$layers_dir"/maven.toml
-    echo -e "[metadata]\n  version = \"$maven_version\"\n  url = \"$maven_url\"" >> "$layers_dir"/maven.toml
-  fi
-  export PATH=$PATH:$layers_dir/maven/bin
+if [[ -f build.gradle ]]; then
 
-  echo "---> Running Maven"
-  mvn clean install -B -DskipTests
+  target_dir="build/libs"
+
+  if [[ ! -d $layers_dir/gradle ]]; then
+    mkdir -p $layers_dir/gradle
+    echo "cache = true" > $layers_dir/gradle.toml
+  fi
+  ln -s $layers_dir/gradle $HOME/.gradle
+
+  if [[ -x gradlew ]]; then
+    echo "---> Running Gradle Wrapper"
+    ./gradlew clean build -x test
+  else
+    if [[ -f $layers_dir/maven.toml ]]; then
+      cached_gradle_url=$(cat "$layers_dir/gradle.toml" | yj -t | jq -r .metadata.url 2>/dev/null || echo 'Gradle TOML parsing failed')
+    fi
+    if [[ $gradle_url != $cached_gradle_url ]] ; then
+      echo "---> Installing Gradle"
+      gradle_dir="$layers_dir/gradle"
+      rm -rf "$gradle_dir"
+      mkdir -p "$gradle_dir"
+      wget -q -O gradle.zip "$gradle_url"
+      jar xvf gradle.zip
+      mv "gradle-$gradle_version" "$gradle_dir"
+      rm gradle.zip
+      chmod a+x "$gradle_dir/gradle-$gradle_version/bin/gradle"
+      echo "launch = false" > "$layers_dir"/gradle.toml
+      echo "build = true" >> "$layers_dir"/gradle.toml
+      echo "cache = true" >> "$layers_dir"/gradle.toml
+      echo -e "[metadata]\n  version = \"$gradle_version\"\n  url = \"$gradle_url\"" >> "$layers_dir"/gradle.toml
+    fi
+    export PATH="$PATH:$layers_dir/gradle/gradle-$gradle_version/bin"
+
+    echo "---> Running Gradle"
+    gradle clean build -x test
+  fi
+
 fi
 
 # Set default start command
-for jarFile in $(find target -maxdepth 1 -name "*.jar" -type f); do
+for jarFile in $(find "$target_dir" -maxdepth 1 -name "*.jar" -type f); do
   echo "processes = [{ type = \"web\", command = \"java -jar $jarFile\"}]" > "$layers_dir/launch.toml"
   break;
 done
