--- a/hello-world-buildpack/buildpack.toml
+++ b/hello-world-buildpack/buildpack.toml
@@ -1,4 +1,7 @@
+[buildpack]
 id = "io.buildpacks.samples.buildpack.hello-world"
 version = "0.0.1"
 name = "Hello World Buildpack"
-stacks = ["packs/v3"]
+
+[[stacks]]
+id = "io.buildpacks.stacks.bionic"
