--- a/builder.toml
+++ b/builder.toml
@@ -4,12 +4,20 @@ uri = "./nodejs-buildpack"
 latest = true
 
 [[buildpacks]]
+id = "io.buildpacks.samples.go"
+uri = "./go-buildpack"
+latest = true
+
+[[buildpacks]]
 id = "io.buildpacks.samples.java"
 uri = "./java-buildpack"
 latest = true
 
 [[groups]]
 buildpacks = [ { id = "io.buildpacks.samples.nodejs", version = "latest" } ]
+
+[[groups]]
+buildpacks = [ { id = "io.buildpacks.samples.go", version = "latest" } ]
 
 [[groups]]
 buildpacks = [ { id = "io.buildpacks.samples.java", version = "latest" } ]
