--- a/builder.toml
+++ b/builder.toml
@@ -1,15 +1,12 @@
 [[buildpacks]]
-id = "io.buildpacks.samples.nodejs"
-uri = "./nodejs-buildpack"
-latest = true
-
-[[buildpacks]]
 id = "io.buildpacks.samples.java"
 uri = "./java-buildpack"
 latest = true
 
 [[groups]]
-buildpacks = [ { id = "io.buildpacks.samples.nodejs", version = "latest" } ]
-
-[[groups]]
 buildpacks = [ { id = "io.buildpacks.samples.java", version = "latest" } ]
+
+[stack]
+id = "io.buildpacks.stack.bionic"
+run-image = "packs/run:0.1.0"
+build-image = "packs/build:0.1.0"
