--- a/builders/builder.toml
+++ b/builders/builder.toml
@@ -1,10 +1,10 @@
 [[buildpacks]]
 id = "io.buildpacks.samples.java"
-uri = "./java-buildpack"
-latest = true
+version = "0.0.1"
+uri = "../buildpacks/java-maven"
 
-[[groups]]
-buildpacks = [ { id = "io.buildpacks.samples.java", version = "latest" } ]
+[[order]]
+group = [ { id = "io.buildpacks.samples.java", version = "0.0.1" } ]
 
 [stack]
 id = "io.buildpacks.stacks.bionic"
