--- a/buildpacks/hello-world/buildpack.toml
+++ b/buildpacks/hello-world/buildpack.toml
@@ -1,4 +1,8 @@
+api = "0.2"
+
 id = "io.buildpacks.samples.buildpack.hello-world"
 version = "0.0.1"
 name = "Hello World Buildpack"
-stacks = ["packs/v3"]
+
+[[stacks]]
+id = "packs/v3"
