--- a/buildpacks/java-gradle/buildpack.toml
+++ b/buildpacks/java-gradle/buildpack.toml
@@ -1,9 +1,18 @@
+# Buildpack API version
 api = "0.2"
 
+# Buildpack ID and metadata
 [buildpack]
 id = "io.buildpacks.samples.gradle"
 version = "0.0.1"
 name = "Sample Gradle Buildpack"
 
+# Stacks that the buildpack will work with
 [[stacks]]
-id = "io.buildpacks.stacks.bionic"
+id = "io.buildpacks.samples.stacks.bionic"
+
+[[stacks]]
+id = "heroku-18"
+
+[[stacks]]
+id = "org.cloudfoundry.stacks.cflinuxfs3"
