--- a/apps/java-maven/pom.xml
+++ b/apps/java-maven/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
+		<version>[2.1,2.2)</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.buildpacks.example</groupId>
