Add conformance tests
* Add kotlin-gradle app
* Rename java-gradle to kotlin-gradle to expand language coverage
* Add travis configuration

Signed-off-by: Javier Romero <jromero@pivotal.io>

--- a/buildpacks/java-maven/buildpack.toml
+++ b/buildpacks/java-maven/buildpack.toml
@@ -3,9 +3,9 @@ api = "0.2"
 
 # Buildpack ID and metadata
 [buildpack]
-id = "io.buildpacks.samples.java"
+id = "io.buildpacks.samples.java-maven"
 version = "0.0.1"
-name = "Sample Java Buildpack"
+name = "Sample Java Maven Buildpack"
 
 # Stacks that the buildpack will work with
 [[stacks]]
