Deploy sample images
Signed-off-by: Javier Romero <jromero@pivotal.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: bash
 dist: bionic
 
-script: make all
+script: make build
+
+deploy:
+  provider: script
+  script: bash make deploy
 
 branches:
   only:
