--- a/buildpacks/java-maven/bin/build
+++ b/buildpacks/java-maven/bin/build
@@ -7,8 +7,13 @@ env_dir="$2/env"
 layers_dir="$1"
 plan_path="$3"
 
-jdk_url="https://cdn.azul.com/zulu/bin/zulu8.28.0.1-jdk8.0.163-linux_x64.tar.gz"
-jdk_version="1.8.0_163"
+jdk_url="https://cdn.azul.com/zulu/bin/zulu8.40.0.25-ca-jdk8.0.222-linux_x64.tar.gz"
+jdk_version="1.8.0_222"
+
+if [[ -r /etc/alpine-release ]]; then
+    jdk_url="https://cdn.azul.com/zulu/bin/zulu8.40.0.25-ca-jdk8.0.222-linux_musl_x64.tar.gz"
+    jdk_version="1.8.0_222"
+fi
 
 maven_url="https://apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz"
 maven_version="3.5.4"
