--- a/buildpacks/kotlin-gradle/bin/build
+++ b/buildpacks/kotlin-gradle/bin/build
@@ -3,10 +3,19 @@ set -eo pipefail
 
 echo "---> Gradle buildpack"
 
-env_dir="$2/env"
+# 1. GET ARGS
 layers_dir="$1"
+env_dir="$2/env"
 plan_path="$3"
 
+# 2. LOAD USER-PROVIDED BUILD-TIME ENVIRONMENT VARIABLES
+if compgen -G "${env_dir}/*" > /dev/null; then
+  for var in "${env_dir}/*"; do
+    declare "$(basename "$var")=$(<"$var")"
+  done
+fi
+
+# 3. INSTALL JAVA
 jdk_url="https://cdn.azul.com/zulu/bin/zulu8.40.0.25-ca-jdk8.0.222-linux_x64.tar.gz"
 jdk_version="1.8.0_222"
 
@@ -15,65 +24,74 @@ if [[ -r /etc/alpine-release ]]; then
     jdk_version="1.8.0_222"
 fi
 
-# Load user-provided build-time environment variables
-if compgen -G "$env_dir/*" > /dev/null; then
-  for var in "$env_dir"/*; do
-    declare "$(basename "$var")=$(<"$var")"
-  done
-fi
-
 echo "---> Installing JDK"
 
 # If it doesn't exist locally, create a JDK cache layer
 # This makes JDK available to subsequent buildpacks as well.
-if [[ -f $layers_dir/jdk.toml ]]; then
-  cached_jdk_url=$(cat "$layers_dir/jdk.toml" | yj -t | jq -r .metadata.url 2>/dev/null || echo 'JDK TOML parsing failed')
+jdk_layer_dir=${layers_dir}/jdk
+if [[ -f ${jdk_layer_dir}.toml ]]; then
+  cached_jdk_url=$(cat "${jdk_layer_dir}.toml" | yj -t | jq -r .metadata.url 2>/dev/null || echo 'JDK TOML parsing failed')
 fi
-if [[ $jdk_url != $cached_jdk_url ]] ; then
+
+if [[ ${jdk_url} != ${cached_jdk_url} ]] ; then
   rm -rf "$layers_dir"/jdk
   mkdir -p "$layers_dir"/jdk/env
-  wget -q -O - "$jdk_url" | tar pxz -C "$layers_dir"/jdk --strip-components=1
-  echo "launch = true" > "$layers_dir"/jdk.toml
-  echo "build = true" >> "$layers_dir"/jdk.toml
-  echo "cache = true" >> "$layers_dir"/jdk.toml
-  echo -e "[metadata]\n  version = \"$jdk_version\"\n  url = \"$jdk_url\"" >> "$layers_dir"/jdk.toml
+  wget -q -O - "$jdk_url" | tar pxz -C "${jdk_layer_dir}" --strip-components=1
+
+  cat > "${jdk_layer_dir}.toml" << EOF
+launch = true
+build = true
+cache = true
+
+[metadata]
+version = "${jdk_version}"
+url = "${jdk_url}"
+EOF
 
   echo "$layers_dir"/jdk > "$layers_dir"/jdk/env/JAVA_HOME
-  if [[ -z $LD_LIBRARY_PATH ]]; then
-    echo "$JAVA_HOME/jre/lib/amd64/server" > $layers_dir/jdk/env/LD_LIBRARY_PATH
+  if [[ -z ${LD_LIBRARY_PATH} ]]; then
+    echo "${JAVA_HOME}/jre/lib/amd64/server" > ${jdk_layer_dir}/env/LD_LIBRARY_PATH
   else
-    echo "$JAVA_HOME/jre/lib/amd64/server:$LD_LIBRARY_PATH" > $layers_dir/jdk/env/LD_LIBRARY_PATH
+    echo "${JAVA_HOME}/jre/lib/amd64/server:${LD_LIBRARY_PATH}" > ${jdk_layer_dir}/env/LD_LIBRARY_PATH
   fi
 
-  mkdir -p $layers_dir/jdk/profile.d
-  cat << EOF > $layers_dir/jdk/profile.d/jdk.sh
-export JAVA_HOME=$layers_dir/jdk
+  mkdir -p ${jdk_layer_dir}/profile.d
+  cat > "${jdk_layer_dir}/profile.d/jdk.sh" << EOF
+export JAVA_HOME=${jdk_layer_dir}
 if [[ -z \$LD_LIBRARY_PATH ]]; then
   export LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server"
 else
-  export LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server:$LD_LIBRARY_PATH"
+  export LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server:${LD_LIBRARY_PATH}"
 fi
 EOF
 fi
+
 # Set env variables to make jdk accessible
 for var in "$layers_dir"/jdk/env/*; do
   declare "$(basename "$var")=$(<"$var")"
 done
-export PATH=$layers_dir/jdk/bin:$PATH
+export PATH=${jdk_layer_dir}/bin:$PATH
 
-target_dir="build/libs"
+# 4. MAKE GRADLE CACHE LAYER
+gradle_layer_dir="${layers_dir}/gradle"
 
-if [[ ! -d $layers_dir/gradle ]]; then
-  mkdir -p $layers_dir/gradle
-  echo "cache = true" > $layers_dir/gradle.toml
+if [[ ! -d ${gradle_layer_dir} ]]; then
+  mkdir -p ${gradle_layer_dir}
+  echo "cache = true" > ${gradle_layer_dir}.toml
 fi
-ln -s $layers_dir/gradle $HOME/.gradle
+ln -s ${gradle_layer_dir} $HOME/.gradle
 
+# 5. RUN BUILD
 echo "---> Running Gradle Wrapper"
 ./gradlew clean build -x test --no-daemon
 
-# Set default start command
-for jarFile in $(find "$target_dir" -maxdepth 1 -name "*.jar" -type f); do
-  echo "processes = [{ type = \"web\", command = \"java -jar $jarFile\"}]" > "$layers_dir/launch.toml"
+# 6. SET DEFAULT START COMMAND
+target_dir="build/libs"
+for jar_file in $(find "$target_dir" -maxdepth 1 -name "*.jar" -type f); do
+  cat > "${layers_dir}/launch.toml" <<EOL
+[[processes]]
+type = "web"
+command = "java -jar ${jar_file}"
+EOL
   break;
 done
