--- a/buildpacks/hello-world/bin/build
+++ b/buildpacks/hello-world/bin/build
@@ -3,15 +3,28 @@ set -eo pipefail
 
 echo "---> Hello World buildpack"
 
+# INPUT ARGUMENTS
 env_dir=$2/env
 layers_dir=$1
 plan_path=$3
 
+# ENV VARS
 echo "     env_dir: ${env_dir}"
+echo "     env vars:"
+if compgen -G "${env_dir}/*" > /dev/null; then
+  for var in ${env_dir}/*; do
+    declare "$(basename ${var})=$(<${var})"
+  done
+fi
+export | sed 's/^/       /'
+
+# LAYERS
 echo "     layers_dir: ${layers_dir}"
+
+# PLAN
 echo "     plan_path: ${plan_path}"
 echo "     plan contents:"
-cat ${plan_path} | sed 's/^/     /'
-
+cat ${plan_path} | sed 's/^/       /'
 echo
+
 echo "---> Done"
