--- a/buildpacks/hello-world/buildpack.toml
+++ b/buildpacks/hello-world/buildpack.toml
@@ -3,7 +3,7 @@ api = "0.2"
 
 # Buildpack ID and metadata
 [buildpack]
-id = "io.buildpacks.samples.buildpack.hello-world"
+id = "io.buildpacks.samples.hello-world"
 version = "0.0.1"
 name = "Hello World Buildpack"
 
