--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -9,6 +9,9 @@ id = "io.buildpacks.samples.kotlin-gradle"
 version = "0.0.1"
 uri = "../../buildpacks/kotlin-gradle"
 
+[[packages]]
+image = "cnbs/sample-package:hello-universe"
+
 # Order used for detection
 [[order]]
 [[order.group]]
@@ -18,6 +21,11 @@ version = "0.0.1"
 [[order]]
 [[order.group]]
 id = "io.buildpacks.samples.kotlin-gradle"
+version = "0.0.1"
+
+[[order]]
+[[order.group]]
+id = "io.buildpacks.samples.hello-universe"
 version = "0.0.1"
 
 # Stack that will be used by the builder
