Create example buildpackage using an image as a dependency
Signed-off-by: Zander Mackie <zmackie@gmail.com>

--- a/packages/hello-universe/package.toml
+++ b/packages/hello-universe/package.toml
@@ -2,7 +2,7 @@
 uri = "../../buildpacks/hello-universe/"
 
 [[dependencies]]
-uri = "../../buildpacks/hello-world/"
+uri = "../../buildpacks/hello-moon"
 
 [[dependencies]]
-uri = "../../buildpacks/hello-moon/"
+image = "cnbs/sample-package:hello-world"
