Structure readme as a journey from apps onward
Signed-off-by: Zander Mackie <zmackie@gmail.com>

--- a/buildpacks/java-maven/buildpack.toml
+++ b/buildpacks/java-maven/buildpack.toml
@@ -9,7 +9,7 @@ name = "Sample Java Maven Buildpack"
 
 # Stacks that the buildpack will work with
 [[stacks]]
-id = "io.buildpacks.samples.stacks.bionic"
+id = "io.buildpacks.stacks.bionic"
 
 [[stacks]]
 id = "io.buildpacks.samples.stacks.alpine"
