--- a/buildpacks/ruby-bundler/buildpack.toml
+++ b/buildpacks/ruby-bundler/buildpack.toml
@@ -9,4 +9,4 @@ name = "Sample Ruby Buildpack"
 
 # Stacks that the buildpack will work with
 [[stacks]]
-id = "io.buildpacks.stacks.bionic"
+id = "io.buildpacks.samples.stacks.bionic"
