--- a/buildpacks/hello-world/buildpack.toml
+++ b/buildpacks/hello-world/buildpack.toml
@@ -9,7 +9,7 @@ name = "Hello World Buildpack"
 
 # Stacks that the buildpack will work with
 [[stacks]]
-id = "io.buildpacks.stacks.bionic"
+id = "io.buildpacks.samples.stacks.bionic"
 
 [[stacks]]
 id = "io.buildpacks.samples.stacks.alpine"
