Add cross-compiling sample stack and builder for armv6
Signed-off-by: Javier Romero <rjavier@vmware.com>
Signed-off-by: Micah Young <ymicah@vmware.com>

--- a/buildpacks/hello-world/buildpack.toml
+++ b/buildpacks/hello-world/buildpack.toml
@@ -13,3 +13,6 @@ id = "io.buildpacks.samples.stacks.bionic"
 
 [[stacks]]
 id = "io.buildpacks.samples.stacks.alpine"
+
+[[stacks]]
+id = "io.buildpacks.samples.stacks.alpine-x-armv6"
