Fix condition in workflow that was causing deploys to skip
Signed-off-by: Andrew Meyer <meyeran@vmware.com>
Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build
         run: PACK_CMD=./pack make build-linux
       - name: Deploy
-        if: github.event_name == 'push' && github.ref == 'master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: make deploy-linux
       - name: Clean up
         run: make clean-linux
@@ -54,7 +54,7 @@ jobs:
       - name: Build
         run: make build-windows
       - name: Deploy
-        if: github.event_name == 'push' && github.ref == 'master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: make deploy-windows
       - name: Clean up
         run: make clean-windows
